apps/plex/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: ExternalName
  externalName: infra1
  ports:
    - port: 32400
