apps/plex/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: plex-ingress-ext
  namespace: media
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`plex.sobrinho.pt`)
      kind: Rule
      middlewares:
        # No authentication middleware for this route.
      services:
        - name: plex
          port: main
  tls:
    options:
      name: mtls-requested
      namespace: traefik
