apps/plex/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: plex-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int

spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`plex.sobrinho.pt`)
      kind: Rule
      services:
        - name: plex
          port: main
  tls:
    options:
      name: mtls-any
      namespace: traefik
